--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,5 +5,7 @@
     <string name="main_title_loading">Is loading…</string>
     <string name="main_title_empty">There is no data</string>
     <string name="main_title_error">Something went wrong</string>
+    <string name="main_button_first">Collapsed</string>
+    <string name="main_button_second">Expanded</string>
 
 </resources>
