Refactor list item as expandable Card with icon

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,8 @@
     <string name="main_title_error">Something went wrong</string>
     <string name="main_button_first">Collapsed</string>
     <string name="main_button_second">Expanded</string>
+    <string name="main_item_title">Hello,</string>
+    <string name="main_item_expandable_text">Composem ipsum color sit lazy, padding theme elit, sed do bouncy.</string>
 
     <string name="onboarding_welcome_text">Welcome to the Basics Codelab!</string>
     <string name="onboarding_button_next_text">Continue</string>
